Bug 1178763, move UIEvent.pageX/pageY to MouseEvent, r=masayuki

Differential Revision: https://phabricator.services.mozilla.com/D36781