dom/events/UIEvent.h
@@ -63,9 +63,6 @@ class UIEvent : public Event {
 
   int32_t LayerY() const { return GetLayerPoint().y; }
 
-  int32_t PageX() const;
-  int32_t PageY() const;
-
   virtual uint32_t Which(CallerType aCallerType = CallerType::System) {
     MOZ_ASSERT(mEvent->mClass != eKeyboardEventClass,
                "Key events should override Which()");
